Added logic to rename folders if the intended name conflicts with the backup policy and its restricted folder names. For the moment the code to restrict that in the workspace (upload) is commented out. If the folders in the workspace are also supposed to be restricted, this code needs to be uncommented and some issues need to be taken care of (links in metadata files become incorrect after renaming the folders).
refs #3823

Adapted to some changes in the metadata API.